Make ScrollPaintPropertyNode::toString() 26% more concise

Before:
root 0x119cf8954118 parent=0x0 clip=0x0 bounds=0x0 userScrollableHorizontal=no userScrollableVertical=no mainThreadScrollingReasons=
  Scroll (FrameView) 0x119cf89540c0 parent=0x119cf8954118 clip=785x276 bounds=785x699 userScrollableHorizontal=yes userScrollableVertical=yes mainThreadScrollingReasons=

After:
root 0x36350c954118 parent=0x0 clip=0x0 bounds=0x0 userScrollable=none mainThreadReasons=none
  Scroll (FrameView) 0x36350c9540c0 parent=0x36350c954118 clip=785x276 bounds=785x699 userScrollable=both mainThreadReasons=none

BUG=683774
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2657253003
Cr-Commit-Position: refs/heads/master@{#446932}

Former-commit-id: 46cf3df5c1b750d2bade33909005304d5a4234a9